added edit profile

--- a/client/styles/anylog.scss
+++ b/client/styles/anylog.scss
@@ -3,3 +3,10 @@
 .title-font {
   font-family: "jaf-peacock-loop";
 }
+
+div.form-error {
+  padding: 5px;
+  background-color: #fcc;
+  border: 1px solid #daa;
+  margin-bottom: 8px;
+}
