--- a/anylog/templates/index.html
+++ b/anylog/templates/index.html
@@ -5,6 +5,19 @@
     <title>Anylog</title>
     <script src="https://use.typekit.net/ihd3qsi.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
+    <script>
+      if (document.location.hostname.search("anylog.xyz") !== -1) {
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-79209737-1', 'auto');
+        ga('send', 'pageview');
+      } else {
+        ga = function(){ console.log(arguments);
+      }
+    </script>
   </head>
   <body>
     <div id="app"></div>
