--- a/anylog/templates/index.html
+++ b/anylog/templates/index.html
@@ -15,7 +15,7 @@
         ga('create', 'UA-79209737-1', 'auto');
         ga('send', 'pageview');
       } else {
-        ga = function(){ console.log(arguments);
+        ga = function(){ console.log(arguments); }
       }
     </script>
   </head>
