--- a/client/styles/Dashboard.scss
+++ b/client/styles/Dashboard.scss
@@ -12,24 +12,41 @@
 .dash-item-header {
   background-color: $brand-primary;
   color: #fff;
-  padding: 4px 8px;
+  padding: 2px 6px;
   position: absolute;
   top: -1px;
   left: -1px;
   right: -1px;
-  border-top: 1px solid #ddd;
-  border-left: 1px solid #ddd;
-  border-right: 1px solid #ddd;
+  border-top: 1px solid $brand-primary;
+  border-left: 1px solid $brand-primary;
+  border-right: 1px solid $brand-primary;
 
   @include border-top-radius($border-radius-base);
+
+  .dash-title {
+    margin: 2px 6px 1px 6px;
+    display: inline-block;
+  }
+
+  .glyphicon {
+    margin: 0;
+    margin-left: 5px;
+    padding: 3px;
+    border-radius: $border-radius-small;
+    cursor: pointer;
+
+    &:hover {
+      background-color: $link-hover-color;
+    }
+  }
 }
 
 .dash-item-body {
   position: absolute;
-  top: 28px;
+  top: 33px;
   bottom: 6px;
   left: 6px;
   right: 6px;
   padding: 6px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
