--- a/anylog/templates/index.html
+++ b/anylog/templates/index.html
@@ -25,6 +25,6 @@
   <body>
     <div id="app"></div>
 
-    <script src="{{ url_for('static/build', filename='bundle.js') }}"></script>
+    <script src="{{ url_for('static', filename='build/bundle.js') }}"></script>
   </body>
 </html>
