--- a/client/styles/LoginDropdown.scss
+++ b/client/styles/LoginDropdown.scss
@@ -1,16 +1,13 @@
 #login-dp{
-    min-width: 250px;
-    padding: 14px 14px 0;
+    min-width: 240px;
     overflow:hidden;
-    background-color:rgba(255,255,255,.8);
 }
 #login-dp .help-block{
     font-size:12px
 }
 #login-dp .bottom{
-    background-color:rgba(255,255,255,.8);
     clear:both;
-    padding:14px;
+    padding-top: 14px;
 }
 #login-dp .form-group {
     margin-bottom: 10px;
