--- a/client/styles/anylog.scss
+++ b/client/styles/anylog.scss
@@ -15,6 +15,11 @@
   color: $brand-primary;
 }
 
+.title-version {
+  font-family: $font-family-sans-serif;
+  color: $gray-light;
+}
+
 .subtitle {
   font-size: 1.5em;
   padding-bottom: 1.5em;
