--- a/client/styles/Dashboard.scss
+++ b/client/styles/Dashboard.scss
@@ -10,16 +10,16 @@
 }
 
 .dash-item-header {
-  background-color: $brand-primary;
+  background-color: $color-primary;
   color: #fff;
   padding: 2px 6px;
   position: absolute;
   top: -1px;
   left: -1px;
   right: -1px;
-  border-top: 1px solid $brand-primary;
-  border-left: 1px solid $brand-primary;
-  border-right: 1px solid $brand-primary;
+  border-top: 1px solid $color-primary;
+  border-left: 1px solid $color-primary;
+  border-right: 1px solid $color-primary;
 
   @include border-top-radius($border-radius-base);
 
