Beginnings of basic data vis with chartjs

--- a/client/styles/Dashboard.scss
+++ b/client/styles/Dashboard.scss
@@ -1,6 +1,9 @@
 @import "variables";
 @import "bootstrap/mixins";
 
+.dashboard {
+  margin: 0 30px;
+}
 .dash-item {
   background-color: #fff;
   border: 1px solid #ddd;
